.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Asset__c.object
<CustomObject>
    <description>Holds details of company equipment handed out to an employee</description>
    <fields>
        <fullName>xcdhcm__Asset_Type__c</fullName>
        <description>This field describes the type of equipment, e.g. Mobile phone etc.</description>
        <inlineHelpText>Please select the asset type from the list.</inlineHelpText>
        <label>Equipment type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3G Data Dongle</fullName>
                </value>
                <value>
                    <fullName>Car</fullName>
                </value>
                <value>
                    <fullName>Handsfree Mobile Phone kit</fullName>
                </value>
                <value>
                    <fullName>Laptop Computer</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Office Furniture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Cost__c</fullName>
        <description>The cost / purchase price of the asset.</description>
        <inlineHelpText>Please enter the cost / purchase price of the asset.</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date_Issued__c</fullName>
        <description>The date the asset was issued to the employee.</description>
        <inlineHelpText>Please select the date the asset was issued to the employee.</inlineHelpText>
        <label>Date issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Date_Returned__c</fullName>
        <description>The date the asset was returned by the employee.</description>
        <inlineHelpText>Please select the date the asset was returned by the employee.</inlineHelpText>
        <label>Date returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <description>The employee to whom the asset has been given</description>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipName>Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Make_brand__c</fullName>
        <label>Make / brand</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Model__c</fullName>
        <description>The model of the asset e.g.  iPhone 3GS</description>
        <inlineHelpText>Please enter the model of the asset e.g.  iPhone 3GS</inlineHelpText>
        <label>Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Serial_Number__c</fullName>
        <description>The serial number or unique identifier of this asset.</description>
        <inlineHelpText>Please enter the serial number or unique identifier of this asset.</inlineHelpText>
        <label>Serial number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Equipment</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>xcdhcm__Asset_Type__c</columns>
        <columns>xcdhcm__Make_brand__c</columns>
        <columns>xcdhcm__Employee__c</columns>
        <columns>xcdhcm__Date_Issued__c</columns>
        <columns>xcdhcm__Date_Returned__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>xcdhcm__All_Assets</fullName>
        <columns>xcdhcm__Employee__c</columns>
        <columns>xcdhcm__Asset_Type__c</columns>
        <columns>xcdhcm__Make_brand__c</columns>
        <columns>xcdhcm__Model__c</columns>
        <columns>xcdhcm__Serial_Number__c</columns>
        <columns>xcdhcm__Date_Issued__c</columns>
        <columns>xcdhcm__Date_Returned__c</columns>
        <columns>xcdhcm__Cost__c</columns>
        <columns>xcdhcm__Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>xcdhcm__Asset__c.xcdhcm__Asset</value>
        </filters>
        <label>Company Assets</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>E{00000000}</displayFormat>
        <label>Equipment reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <recordTypes>
        <fullName>xcdhcm__Asset</fullName>
        <active>true</active>
        <label>Asset</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>xcdhcm__Date_returned_should_not_be_before_Date</fullName>
        <active>true</active>
        <errorConditionFormula>xcdhcm__Date_Returned__c &lt; xcdhcm__Date_Issued__c</errorConditionFormula>
        <errorMessage>Date returned should not be before Date issued.</errorMessage>
    </validationRules>
</CustomObject>